--- a/index.html
+++ b/index.html
@@ -72,6 +72,6 @@
         </tr>
       </table>
       <hr>
-      <a href="C:\Users\mukreddy\Desktop\FE\FE_Site\Hobbies.html">My Hobbies</a>
-      <a href="C:\Users\mukreddy\Desktop\FE\FE_Site\Contact.html">Contact Me</a>
+      <a href="\Hobbies.html">My Hobbies</a>
+      <a href="\Contact.html">Contact Me</a>
       <html>
