--- a/index.html
+++ b/index.html
@@ -72,6 +72,6 @@
         </tr>
       </table>
       <hr>
-      <a href="FE_Practice\Hobbies.html">My Hobbies</a>
-      <a href="FE_Practice\Contact.html">Contact Me</a>
+      <a href="Hobbies.html">My Hobbies</a>
+      <a href="Contact.html">Contact Me</a>
       <html>
