--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </style>
     <table cellspacing="20">
       <tr>
-        <td><img src="C:\Users\mukreddy\Desktop\FE\FE_Site\download.png" alt="Profile Photo" height="150" width="150" style="" /></td>
+        <td><img src="Images/download.png" alt="Profile Photo" height="150" width="150" style="" /></td>
         <td>
           <h1>Janardhan Reddy Mukku</h1>
           <p>Consultant at Deloitte</p>
